{
  "version": 4,
  "terraform_version": "0.12.8",
  "serial": 26,
  "lineage": "6a70711b-5ffd-24fa-d2ab-3efae6a00229",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "testInstance",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-b374d5a5",
            "arn": "arn:aws:ec2:us-east-1:516854182046:instance/i-01a22a62d50c4c8c9",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-01a22a62d50c4c8c9",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "publicKey",
            "monitoring": false,
            "primary_network_interface_id": "eni-0bd4cfe1bac750986",
            "private_dns": "ip-10-1-0-107.ec2.internal",
            "private_ip": "10.1.0.107",
            "public_dns": "ec2-34-200-245-96.compute-1.amazonaws.com",
            "public_ip": "34.200.245.96",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0b190e13b3abaf08b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06aceb04ea26efa62",
            "tags": {
              "Environment": "Test"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0181e09547fb1884f"
            ]
          },
          "depends_on": [
            "aws_key_pair.ec2key",
            "aws_security_group.sg_22",
            "aws_subnet.subnet_public"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-b374d5a5",
            "arn": "arn:aws:ec2:us-east-1:516854182046:instance/i-07cbf006eea89c2c5",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-07cbf006eea89c2c5",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "publicKey",
            "monitoring": false,
            "primary_network_interface_id": "eni-05da12869bfe3d5ed",
            "private_dns": "ip-10-1-1-239.ec2.internal",
            "private_ip": "10.1.1.239",
            "public_dns": "ec2-3-85-25-118.compute-1.amazonaws.com",
            "public_ip": "3.85.25.118",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-005f823fc6d1b78d8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07c67cb6a6a3109fc",
            "tags": {
              "Environment": "Test"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0181e09547fb1884f"
            ]
          },
          "depends_on": [
            "aws_key_pair.ec2key",
            "aws_security_group.sg_22",
            "aws_subnet.subnet_public"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-b374d5a5",
            "arn": "arn:aws:ec2:us-east-1:516854182046:instance/i-0e61ac8a55c3f3727",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0e61ac8a55c3f3727",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "publicKey",
            "monitoring": false,
            "primary_network_interface_id": "eni-05915e84dfa6e366d",
            "private_dns": "ip-10-1-2-121.ec2.internal",
            "private_ip": "10.1.2.121",
            "public_dns": "ec2-34-235-143-62.compute-1.amazonaws.com",
            "public_ip": "34.235.143.62",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-069657cf92094957d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02d91c00d01b0b73b",
            "tags": {
              "Environment": "Test"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0181e09547fb1884f"
            ]
          },
          "depends_on": [
            "aws_key_pair.ec2key",
            "aws_security_group.sg_22",
            "aws_subnet.subnet_public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0ee20976cd9d5b04e",
            "owner_id": "516854182046",
            "tags": {
              "Environment": "Test"
            },
            "vpc_id": "vpc-0e78682aeff498df2"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb_public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0afd40d8eb72410d5",
            "owner_id": "516854182046",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ee20976cd9d5b04e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Test"
            },
            "vpc_id": "vpc-0e78682aeff498df2"
          },
          "depends_on": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_subnet_public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dfaee65db3cef7d9",
            "route_table_id": "rtb-0afd40d8eb72410d5",
            "subnet_id": "subnet-06aceb04ea26efa62"
          },
          "depends_on": [
            "aws_route_table.rtb_public"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01779ec296aab8625",
            "route_table_id": "rtb-0afd40d8eb72410d5",
            "subnet_id": "subnet-07c67cb6a6a3109fc"
          },
          "depends_on": [
            "aws_route_table.rtb_public",
            "aws_subnet.subnet_public"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e855d8c686d6a862",
            "route_table_id": "rtb-0afd40d8eb72410d5",
            "subnet_id": "subnet-02d91c00d01b0b73b"
          },
          "depends_on": [
            "aws_route_table.rtb_public",
            "aws_subnet.subnet_public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_22",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:516854182046:security-group/sg-0181e09547fb1884f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0181e09547fb1884f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sg_22",
            "name_prefix": null,
            "owner_id": "516854182046",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Test"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e78682aeff498df2"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:516854182046:subnet/subnet-06aceb04ea26efa62",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.0.0/24",
            "id": "subnet-06aceb04ea26efa62",
            "map_public_ip_on_launch": true,
            "owner_id": "516854182046",
            "tags": {
              "Environment": "Test",
              "Name": "Subnet-1"
            },
            "vpc_id": "vpc-0e78682aeff498df2"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:516854182046:subnet/subnet-07c67cb6a6a3109fc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.1.0/24",
            "id": "subnet-07c67cb6a6a3109fc",
            "map_public_ip_on_launch": true,
            "owner_id": "516854182046",
            "tags": {
              "Environment": "Test",
              "Name": "Subnet-2"
            },
            "vpc_id": "vpc-0e78682aeff498df2"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:516854182046:subnet/subnet-02d91c00d01b0b73b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.2.0/24",
            "id": "subnet-02d91c00d01b0b73b",
            "map_public_ip_on_launch": true,
            "owner_id": "516854182046",
            "tags": {
              "Environment": "Test",
              "Name": "Subnet-3"
            },
            "vpc_id": "vpc-0e78682aeff498df2"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:516854182046:vpc/vpc-0e78682aeff498df2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0405ca75cb2112fa6",
            "default_route_table_id": "rtb-04d5d589770ad0c17",
            "default_security_group_id": "sg-0257ffe0e6dfa2186",
            "dhcp_options_id": "dopt-66aaf51d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0e78682aeff498df2",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-04d5d589770ad0c17",
            "owner_id": "516854182046",
            "tags": {
              "Environment": "Test"
            }
          }
        }
      ]
    }
  ]
}